--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,11 +2,14 @@
 
 html,
 body {
-  padding: 0;
   background: var(--layer1);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+body {
+  padding: 50px 0 0 0;
 }
 
 * {
